[project]
name = "python-meetup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "geopandas>=1.1.0",
    "h3>=4.3.0",
    "jupyter>=1.1.1",
    "lonboard>=0.11.1",
    "matplotlib>=3.10.3",
    "osmnx>=2.0.4",
    "palettable>=3.3.3",
    "plotly>=6.1.2",
    "pyarrow>=20.0.0",
    "sidecar>=0.7.0",
    "tqdm>=4.67.1",
]
